# ent/schema/mcpserver.go
@@ -28,9 +28,45 @@ func (MCPServer) Fields() []ent.Field {
 		field.String("server_url").
 			NotEmpty().
 			MaxLen(2048),
+		field.String("auth_mode").
+			Default("header"),
 		field.String("auth_token").
 			Optional().
 			Sensitive(),
+		field.String("oauth_auth_url").
+			Optional(),
+		field.String("oauth_token_url").
+			Optional(),
+		field.String("oauth_client_id").
+			Optional(),
+		field.String("oauth_client_secret").
+			Optional().
+			Sensitive(),
+		field.Strings("oauth_scopes").
+			Optional(),
+		field.String("oauth_pkce_policy").
+			Optional().
+			Default("supported"),
+		field.String("oauth_access_token").
+			Optional().
+			Sensitive(),
+		field.String("oauth_refresh_token").
+			Optional().
+			Sensitive(),
+		field.Time("oauth_access_token_expires_at").
+			Optional().
+			Nillable(),
+		field.Time("oauth_refresh_token_expires_at").
+			Optional().
+			Nillable(),
+		field.Time("oauth_authenticated_at").
+			Optional().
+			Nillable(),
+		field.Time("oauth_last_refresh_at").
+			Optional().
+			Nillable(),
+		field.Int("oauth_refresh_fail_count").
+			Default(0),
 		field.String("status").
 			Default("active"),
 		field.String("status_reason").
@@ -60,6 +96,7 @@ func (MCPServer) Edges() []ent.Edge {
 			Ref("mcp_servers"),
 		edge.From("rituals", Ritual.Type).
 			Ref("mcp_servers"),
+		edge.To("oauth_sessions", MCPOAuthSession.Type),
 	}
 }
 
